// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`рендерит метки - неправильный utm_term (linkId не хеш) 1`] = `
Object {
  "utm_campaign": "widget-listing-carousel",
  "utm_source": "yandex-zen",
}
`;

exports[`рендерит метки - неправильный utm_term (отсутствует rid) 1`] = `
Object {
  "utm_campaign": "widget-listing-carousel",
  "utm_source": "yandex-zen",
}
`;

exports[`рендерит метки - неправильный utm_term (формат) 1`] = `
Object {
  "utm_campaign": "widget-listing-carousel",
  "utm_source": "yandex-zen",
}
`;

exports[`рендерит метки - правильный utm_term 1`] = `
Object {
  "utm_campaign": "widget-listing-carousel",
  "utm_source": "yandex-zen",
  "utm_term": "60bf2c13b25b201687b30b4bz2305707289x3797966437x3797080587574711x982277662",
}
`;
